# KotoLab01

./: .gitignore  README.md  claude.md  index.html  package-lock.json  package.json  pyproject.toml  server.py  vite.config.ts
src/: App.vue
src/components/: AudioMonitor.vue  AudioRecorder.vue  RecordingHistory.vue
src/composables/: useAudioDevices.ts  useAudioMonitor.ts  useBeepSound.ts
